<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="3"
    tools:context=".MainActivity">


    <LinearLayout
        android:orientation="vertical"
        android:layout_weight="2"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_marginTop="5dp"
        android:layout_height="match_parent"
        android:layout_marginBottom="5dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/agri"
            />

    </LinearLayout>


    <LinearLayout
        android:padding="10dp"
        android:layout_weight="1"
        android:background="#1f1f93"
        android:orientation="vertical"
        android:layout_marginBottom="50dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <Button
            android:id="@+id/button1Id"
            android:layout_weight="1"
            android:textAlignment="viewStart"
            android:text="@string/button1"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="0dp" />
        <Button
            android:id="@+id/button2Id"
            android:layout_weight="1"
            android:textAlignment="viewStart"
            android:text="@string/button2"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_width="match_parent"
            android:layout_height="0dp" />
        <Button
            android:id="@+id/button3Id"
            android:layout_weight="1"
            android:textAlignment="viewStart"
            android:text="@string/button3"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="0dp" />
        <Button
            android:id="@+id/button4Id"
            android:layout_weight="1"
            android:text="@string/button4"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAlignment="viewStart"
            android:layout_width="match_parent"
            android:layout_height="0dp"/>
        <Button
            android:id="@+id/button5Id"
            android:layout_weight="1"
            android:text="@string/button5"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAlignment="viewStart"
            android:layout_width="match_parent"
            android:layout_height="0dp" />

    </LinearLayout>


</LinearLayout>